--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "dependencies": {
         "axios": "^1.4.0",
+        "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "form-data": "^4.0.0",
         "multer": "^1.4.5-lts.1",
