--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "multer": "^1.4.5-lts.1",
         "openai": "^4.0.0-beta.4"
     },
-    "name": "gregtest2",
+    "name": "chatemup",
     "version": "1.0.0",
     "main": "index.js",
     "keywords": [
